--- a/6_WebSite/Blogs.WebSite/index.html
+++ b/6_WebSite/Blogs.WebSite/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="技术博客平台 - 分享编程知识，记录技术成长" />
     <title>知识分享平台</title>
