完善后台接口

--- a/6_WebSite/Blogs.WebSite/index.html
+++ b/6_WebSite/Blogs.WebSite/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="技术博客平台 - 分享编程知识，记录技术成长" />
-    <title>知识分享平台</title>
+    <title>全栈技术训练营</title>
   </head>
   <body>
     <div id="root"></div>
